rtpjitterbuffer: Does not reschedule timers on ts-offset updates
CC @ndufresne
In 4a9f4243 an optimization was applied to update_timer_offsets()
that doesn't reschedule timers anymore with the explanation that it's not necessary because we update the offset of all timers. That would be true, but we don't update the offsets of all timers: EXPECTED
timers are kept the way they are.
If I'm not mistaken this can now cause the order of all-except-for-EXPECT
timers to change relative to all-EXPECT
timers, and potentially needs a reschedule.